--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -34,17 +34,21 @@ padding-top: 1px;
     font-family:"Nokora";
     font-style: normal;
     font-weight: 500;
-    font-size: 100px;
+    font-size: 116px;
     line-height: 13%;
     color:#E5FAFF;
-    -webkit-text-stroke-color:#4B779B; 
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color:#333651; 
+    -webkit-text-stroke-width: 1.5px;
     text-align:center;
     padding-top: 60px;
     padding-left: 10px;
+    font-weight: 400;
+     ;
    
     
  }
+ 
+
  
  h2 {
 
@@ -74,14 +78,14 @@ padding-top: 1px;
    color: #E5FAFF;
  }
 
- .film-flex {
- display: flex;
- padding: auto;
- }
+#film {
+  float: right;
+  margin: 10px;
+}
  
  .content-box {
-   width: 700px;
-   height: 499px;
+   width: 460px;
+   height: 358px;
    padding: 80px;
    border: none;
    background: rgba(255, 255, 255, 0.64);
@@ -120,9 +124,13 @@ padding-top: 1px;
    font-family: "Nokora";
    text-indent: 5em;
    font-size: auto;
-   padding-left: 80px;
-   padding-right: 80px;
+   padding-left: 87px;
+   padding-right: 87px;
+   color: #333651;
+   text-transform: capitalize;
  }
+
+
  #perspective h2 {
    text-align: center;
    margin-left: auto;
