--- a/assets/styles/transform.css
+++ b/assets/styles/transform.css
@@ -2,21 +2,23 @@ section span {
   display:inline-block;
   line-height: 20px;
   letter-spacing: auto;
-  width: 110px;
 }
-
 .rotate90 {
    transform: rotate(90deg) ;
    padding-inline: 5px;
+   transform-origin: top;
 }
 .rotate-90 {
    transform: rotate(-90deg) ;
+   transform-origin: top;
 }
 .rotate180 {
   transform: rotate(180deg) ;
+  transform-origin: top;
 }
 .rotate270 {
   transform: rotate(270deg) ;
+  transform-origin: top;
 }
 span {
  letter-spacing: (auto) ;
