--- a/assets/styles/explore.css
+++ b/assets/styles/explore.css
@@ -1,38 +1,92 @@
 *
-#explore style {
-    padding: 10px ;
-    padding-top: 10px;
-    margin-left: 50px;
-    margin-right: 3px;
- background-image: linear-gradient(180deg, #4B779B, #333651) no-repeat;
- background-repeat: no-repeat;
-}
+
 #second-page {
     margin: 10px 10%;
-    background: linear-gradient( #4B779B, #333651) no-repeat;
-    height: 1900px ;
+     height:max-content;
+     
 }
-section {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 50px;
+
+
+
+#article h1 {
+    text-align: center;
+    grid-column: span 3;
+}
+
+#article {
+    border: 2px solid #ffffff; /* Adjust the border style, width, and color as needed */;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr 2fr 8fr;
+    grid-gap: 20px; /* Adjust the gap as needed */
+  }
+  
+  #article img {
     width: 50%;
-    height: 300px;
-    border-width: 5px ;
-    border-radius: 5px;
+    height: 200px; /* Adjust the height as needed */
+    object-fit:fill;
+    border: none;
+    padding-left: 10px;
+  }
+  .article-box label {
+    font-size: 23px;
+  }
+  #article header {
+    grid-column: span 3;
+    font-weight: 100;
+    stroke:  #79c6d7;
+    color: #79c6d7;
+    text-align: center;
+    font-family: Julius Sans One;
+    font-size: 60px;
+    font-style: normal;
+    height: 70px;
+    background-color: #ffffff;
+    letter-spacing: 10px;
+    align-content: center;
+    grid-row: unset;
+   
+  }
+ :-webkit-any(.subheader-1, .subheader-2, .subheader-3) {
+    grid-column: span 3; /* Place the subheader in the first column */
+    font-size: 40px;
+    font-family: Nokora;
+    font-style: normal;
+    color: #ffffff;
+    -webkit-text-stroke: 2px #0876b2;
+    font-weight: 770;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-shadow:2px 5px 7px black;
 }
 
- #explore h1  {
-    text-align: center;   
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  textarea .article-box {
+    width: 100%;
+    height: 100px;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  input[type="submit"] {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
+.article-box {
+    border: 1px solid #ccc;
+    padding: 20px;
+    height: 90%;
+  }
 
-.feature-flex {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    column-gap: 50px;
-}
-
+  
 body
 {
   font-family: Open sans, Helvetica;
@@ -44,27 +98,12 @@ body
 h1
 {
   font-weight: lighter;
+  display:inline-flex;
 }
 
-
-
-
-#article {
-    width: 100px;
-    height: 200px;
-    
-}
-
- #image-preview {
+#film_select div {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-    border: 1px solid #ccc;
-    padding: 10px;
-  }
+    justify-content: space-around;
+}
+
   
-  #third-page #image-preview img {
-    max-width: 100%;
-    max-height: 100%;
-  }
