--- a/assets/styles/explore.css
+++ b/assets/styles/explore.css
@@ -6,11 +6,11 @@
      
 }
 
-
-
 #article h1 {
     text-align: center;
-    grid-column: span 3;
+    margin-left: 50px;
+    padding-right: 400px;
+    
 }
 
 #article {
@@ -21,17 +21,19 @@
     grid-gap: 20px; /* Adjust the gap as needed */
   }
   
-  #article img {
+#article img {
     width: 50%;
     height: 200px; /* Adjust the height as needed */
     object-fit:fill;
     border: none;
     padding-left: 10px;
   }
-  .article-box label {
-    font-size: 23px;
+
+.article-box label {
+    font-size: 20px;
   }
-  #article header {
+
+#article header {
     grid-column: span 3;
     font-weight: 100;
     stroke:  #79c6d7;
@@ -47,7 +49,8 @@
     grid-row: unset;
    
   }
- :-webkit-any(.subheader-1, .subheader-2, .subheader-3) {
+ 
+:-webkit-any(.subheader-1, .subheader-2, .subheader-3, .subheader-4) {
     grid-column: span 3; /* Place the subheader in the first column */
     font-size: 40px;
     font-family: Nokora;
@@ -59,34 +62,49 @@
     padding-right: 50px;
     text-shadow:2px 5px 7px black;
 }
-
   
-  label {
+label {
     display: block;
     margin-bottom: 5px;
   }
-  
-  textarea .article-box {
-    width: 100%;
-    height: 100px;
+
+textarea .article-box {
+   
     padding: 5px;
     border: 1px solid #ccc;
+    grid-column: span 2;
+    grid-row: 1;
+    resize: none;
   }
-  
-  input[type="submit"] {
+input[type="textarea"]{
+  height: 400px;
+}
+
+input[type="submit"] {
     padding: 5px 10px;
     background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
 }
+
+input[type="submit-text"] {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
 .article-box {
     border: 1px solid #ccc;
     padding: 20px;
     height: 90%;
-  }
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr 2fr 8fr;
 
-  
+  } 
+
 body
 {
   font-family: Open sans, Helvetica;
@@ -105,5 +123,33 @@ h1
     display: flex;
     justify-content: space-around;
 }
+.add {
+  grid-column: span 3;
+  height: 100px;
+}
 
+.add textarea{
+  height: 100px;
+  width: 100px;
+}
+
+textarea {
+
+    height: 100px;
+    width: 300px;
+    resize: none;
   
+}
+
+svg {
+  padding-top: 8px;
+}
+ 
+#subheader-1 #add input[type="submit"]{
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  height: 10px;
+}
