--- a/assets/styles/explore.css
+++ b/assets/styles/explore.css
@@ -13,7 +13,7 @@
 }
 
 
-#article {
+#article{
     border: 2px solid #ffffff; /* Adjust the border style, width, and color as needed */;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -48,6 +48,16 @@
     align-content: center;
    
   }
+.subheader-1, .subheader-2, .subheader-3,
+.add { 
+  grid-column: span 3; /* Make the header and subheaders span across all columns */
+  border: 1px solid #000; /* Add a border around the spanning elements */
+}
+.add {
+  display: flex; /* Allow the content to wrap to the next line if needed */
+  align-items:normal; /* Center the content vertically */
+}
+
  
 :-webkit-any(.subheader-1, .subheader-2, .subheader-3, .subheader-4) {
     grid-column: span 3; /* Place the subheader in the first column */
@@ -78,10 +88,10 @@ textarea .article-box {
     resize: none;
   }
 input[type="textarea"]{
-  height: 145px;
+  height: 95px;
   width: 800px;
-  top: -20px;
-  
+  align-content: center;
+  position: relative;
 }
 
 input[type="submit-text"] {
@@ -90,12 +100,14 @@ input[type="submit-text"] {
   color: white;
   border: none;
   cursor: pointer;
+  position: relative;
   
 }
 .add input[type="textarea"]{
   border: 1px solid black;
   border-width: 5px;
   box-shadow:2px 5px 7px black;
+  
 }
 input[type="submit"] {
     padding: 5px 10px;
@@ -128,14 +140,7 @@ h1
   display:inline-flex;
 }
 
-#film_select div {
-    display: flex;
-    justify-content: space-around;
-}
-.add {
-  grid-column: span 3;
-  height: 100px;
-}
+
 
 
 textarea {
