--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,8 +1,9 @@
 *  
 main {
-   padding: 10px 1%;
+   padding: 5%;
    margin-left: 50px;
-   margin-right: 3px;
+   margin-right: 23px;
+   border: 2px solid white;
 }
 *#perspectives h1 {
   font-family:"Nokora";
@@ -58,11 +59,13 @@ padding-top: 1px;
   position: relative;
   top: -50px;
 }
- header {
+ #content-box header {
    font-family: "Nokora";
-   font-size: 40px;
-   line-height: 1px;
-
+   display: flex;
+   justify-content: space-around;
+      line-height: 1px;
+   font-size: 29px;
+   position: relative;
  }
  
  :-webkit-any(h1) section {
@@ -70,7 +73,6 @@ padding-top: 1px;
   margin-block-start: 0.83em;
   margin-block-end: 0em;
   letter-spacing: normal;
-
 }
  .content-box {
    width: 500px;
@@ -85,7 +87,10 @@ padding-top: 1px;
   font-family: "Julius Sans One";
   font-size: 15px;
   line-height: 7px;
-  
+}
+section #perspective #why .content-box .text .idea{
+  border: 2px white;
+  padding: 5%;
 }
   div.content-box {
    text-align: right;
