--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -16,8 +16,9 @@
   justify-content: space-around;
 } 
 #first-page .topnav {
-  align-content: center;
-  justify-content: center;
+  margin-top:0vw;
+  margin: -1vw -10vw 1vw;
+  padding-bottom: 0vw;
 }
 article #logo {
   border: 2px solid green;
