--- a/assets/styles/explore.css
+++ b/assets/styles/explore.css
@@ -5,23 +5,42 @@ main {
   margin-right: 23px;
   border: 2px solid white;
 }
-
+div.article-logo {
+  
+  margin-left: -10vw;
+  margin-top:-.4vw;
+    padding-left: -7vw;
+    display: flex;
+    height: 4.5vw;
+    background-color:#1c2786;
+    align-items: center;
+    
+    justify-content: space-around;
+  }
+  img {
+    overflow: clip;
+  }
+  img#logo {
+    height: 7vw;
+    display: flex;
+    margin-top: 2vw ;
+  }
+    
 .topnav {
   
-  background-color: #e9e9e9;
 
 }
 div.article-logo{
-  width: 600px;
+  margin-top: -.5vw;
+  width: 101.3vw;
   background-color: none;
+
 }
 
 .topnav a {
   float: left;
-  display: block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -64,7 +83,9 @@ div.article-logo{
      height:max-content;
      
 }
-
+#second-page, .topnav{
+  margin: 5px 4%;
+}
 #article h1 {
     text-align: center;
     margin-left: 50px;
@@ -145,13 +166,7 @@ section .mlists {
     text-shadow:2px 5px 7px black;
 }
 
-
-img#logo {
-  height: 7vw;
-}
-  
 label {
-    display: flex;
     margin-bottom: 5px;
     justify-content: space-around;
   }
@@ -195,7 +210,7 @@ input[type="submit"] {
 }
 input[type="search" i]{
   border:2px solid #111;
-  max-width: fit-content;
+  width: 120px;
   
 }
     
