--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,7 +6,7 @@
   font-weight: 500;
   font-size: 8vw;
   color:#E5FAFF;
-  background-color: #E5FAFF;
+  background-color: none;
   height: 300px;
   align-items: center;
   -webkit-text-stroke-color:#333651; 
@@ -15,20 +15,56 @@
   display: flex;
   justify-content: space-around;
 } 
-#first-page .topnav {
-  margin-top:0vw;
-  margin: -1vw -10vw 1vw;
-  padding-bottom: 0vw;
+.topnav{
+margin: -10px -12.5%;
 }
-article #logo {
-  border: 2px solid green;
-  width: 300px;
-  display: inline-flex;
+div.article-logo {
+  margin-top:-.4vw;
+  display:block ;
+  background-color:#1c2786;
+  }
+  img#logo {
+    height: 3vw;
+    display: inline;
+    margin-top: 1vw ;
+    margin-left: 50px;
+    align-items: center;
+
+  }
+  div.article-tex {
+    display: inline;
+    text-align: center;
+  }
+
+
+.topnav a {
+  color: #8aa5c5;
+  text-align:justify;
+  font-size: 17px;
+  margin: 10px -1%;
+  display:inline-block;
+  width: 8%;
 }
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+
+
+ 
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+
 h1 {
   margin-top: 0px;
-}
-h2 {
 
 }
 .stroke-outside {
@@ -62,7 +98,7 @@ body {
   
   font-family: "Julius Sans One" ;
   font-size: 24px;
-  line-height: 35px;
+  
   font-weight:2px;
 }
 #link p {
@@ -191,8 +227,5 @@ label[for="textarea"] {
   font-size: small;
 }
 
-#tv-shows {
-
-}
 
 
