--- a/assets/styles/explore.css
+++ b/assets/styles/explore.css
@@ -25,12 +25,12 @@ div.article-logo {
 
 .topnav a {
   color: #8aa5c5;
-  text-align: center;
-  text-decoration: none;
+  
   font-size: 17px;
-  display:inline-block;
-  width: 8%;
-  align-items: right;
+  width: 14%;
+  line-height: 20px;
+  bottom: 30px;
+  padding-left: 20px;
 }
 
 .topnav a:hover {
@@ -50,7 +50,6 @@ div.article-logo {
     border: 1px solid #ccc;  
   }
 
-     
 
 
 #article h1 {
