--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,7 +7,7 @@
   font-size: 8vw;
   color:#E5FAFF;
   background-color: none;
-  height: 300px;
+  height: 130px;
   align-items: center;
   -webkit-text-stroke-color:#333651; 
   -webkit-text-stroke-width: 1.5px;
@@ -15,6 +15,17 @@
   display: flex;
   justify-content: space-around;
 } 
+form {
+}
+form,.button1, .button2 {
+  display: inline-flex;
+}
+.button1, .button2 {
+  border-radius: 12px;
+}
+#title h1{
+  background-color: #2196F3;
+}
 div{
   display: block;
   unicode-bidi: isolate;
@@ -27,7 +38,7 @@ header nav.topnav a{
   gap: 50px;
 }
 .topnav{
-margin: -10px -12.5%;
+margin: -10px -21.4%;
 }
 div.article-logo {
   margin-top:-.4vw;
@@ -42,7 +53,7 @@ div.article-logo {
     align-items: center;
 
   }
-  div.article-tex {
+  div.article-text {
     display: flex;
     text-align: center;
   }
@@ -80,11 +91,30 @@ display: inline-flex;
 
 h1 {
   margin-top: 0px;
+  display: block;
 
+}
+#perspective h2 {
+  color: #000;
+  background-color: #E5FAFF;
+  height: 120px;
+  margin-top: -10%;
+}
+h2{
+  margin-top: -6%;
+  font-size: 40px;
+    font-family: Nokora;
+    font-style: normal;
+    color: #ffffff;
+    -webkit-text-stroke: 2px #0876b2;
+    font-weight: 770;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 .stroke-outside {
   paint-order: stroke fill;
 }
+
 h1 span {
   color: #E5FAFF;
 }
@@ -100,12 +130,10 @@ padding-right: 5%;
 z-index: 99;
 position:relative;
 font-weight: 100;
-stroke:  #79c6d7;
-color: #79c6d7;
+color:white;
 text-align: center;
 font-family: Julius Sans One;
 font-style: normal;
-background-color: #ffffff;
 letter-spacing: 10px;
 }
 body {
@@ -129,7 +157,7 @@ padding-top: 1px;
 
 }
 #perspective.idea {
-  background-color: white;
+  background-color: none;
   border: 3px solid white;
   border-radius: 50px;
   
@@ -143,7 +171,7 @@ padding-top: 1px;
    position: relative;
  }
  #first-page {
-  margin: 10px 10%;
+  margin: 10px 15%;
      height:max-content;
  }
  
@@ -174,6 +202,7 @@ section #perspective #why .content-box .text .idea{
   div.content-box {
    text-align: right;
  }
+
  ol {
    display: block;
    list-style-type: decimal;
