--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -58,7 +58,6 @@ div.article-logo {
 
   a:-webkit-any-link {
     vertical-align: 25px;
-display: inline-flex;
 }
 .topnav a {
   color: #8aa5c5;
@@ -90,15 +89,10 @@ display: inline-flex;
 h1 {
   margin-top: 0px;
   display: block;
+  margin-bottom: 0px;
 
 }
-#perspective h2 {
-  color: #79c6d7;
-  background-color: #E5FAFF;
-  height: 120px;
-  margin-top: -10%;
-  height: 4vw;
-}
+
 
 .stroke-outside {
   paint-order: stroke fill;
@@ -109,12 +103,11 @@ h1 span {
 
 }
 #perspective h2 {
-  padding-top: 2vw;
   text-align: center;
   }
 #perspective p {
 text-indent: 5em;
-font-size: 32px;
+font-size: 22px;
 padding-left: 87px;
 padding-right: 5%;
 z-index: 99;
@@ -158,7 +151,24 @@ padding-top: 1px;
   background-color: none;
   border: 3px solid white;
   border-radius: 50px;
-  
+}
+ #perspective.idea {
+    color: #79c6d7;
+   
+}
+label {
+  font-weight: 100;
+    stroke:  #79c6d7;
+    color: #79c6d7;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Julius Sans One;
+    font-size: 2vw;
+    font-style: normal;
+    height: 70px;
+    background-color: #ffffff;
 }
   header {
    font-family: "Nokora";
@@ -179,7 +189,7 @@ padding-top: 1px;
 }
  .content-box {
    width: 45%;
-   height: 40vw;
+   height: 32vw;
    border: none;
    background: rgba(255, 255, 255, 0.64);
    border-radius: 68px;
@@ -268,71 +278,4 @@ label[for="textarea"] {
   font-size: small;
 }
 /* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-  background-color: none;
-  color: white;
-  padding: auto;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
-form.form-container {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: baseline;
-}
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
-  bottom: 0;
-  right: 15px;
-}
 
-/* Add styles to the form container */
-.form-container {
-  max-width: 100px;
-}
-
-/* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100px;
-  padding: 6px 22px;
-  border: none;
-  background: #f1f1f1;
-  align-items: baseline;
-}
-
-/* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 6px 22px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
-
-div#myForm.form-popup {
-  display: inline-block;
-}
