--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,71 @@
-*  
+*
+
+#first-page {
+  margin: 10px 15%;
+     height:max-content;
+ }
+ header #desktop-nav menu {
+  display: flex;
+  gap: 40px;
+}
+
+nav {
+  display: flex;
+  unicode-bidi: isolate;
+}
+header {
+  font-family: "Nokora";
+  display: flex;
+  justify-content: center;
+  font-size: 29px;
+}
+header menu li {
+  list-style: none;
+}
+
+header menu li a {
+  color:white;
+  font-size: 18px;
+  text-decoration: none;
+  transition: color .5s;
+}
+ nav#desktop-nav{
+  margin: -10px -21.4%;
+  color: #8aa5c5; 
+  font-size: 17px;
+  line-height: 20px;
+  bottom: 30px;
+  padding-left: 20px;
+  display: flex;
+  }
+  .topnav a {
+    color: #8aa5c5;
+    
+    font-size: 17px;
+    width: 14%;
+    line-height: 20px;
+    bottom: 30px;
+    padding-left: 20px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+  .topnav input[type=text] {
+      border: 1px solid #ccc;  
+  } 
+  .topnav label {
+    font-size: 16px;
+  }
+  .topnav h1 {
+    font-size: 16px;
+  }
 
 *#perspectives h1 {
   font-family:"Nokora";
@@ -15,7 +82,7 @@
   display: flex;
   justify-content: space-around;
 } 
-form,.button1, .button2 {
+.button1, .button2 {
   display: inline-flex;
 }
 .button1, .button2 {
@@ -28,20 +95,14 @@ div{
   display: block;
   unicode-bidi: isolate;
 }
-nav {
-  display: block;
-  unicode-bidi: isolate;
-}
-header nav.topnav a{
-  gap: 50px;
-}
-.topnav{
-margin: -10px -21.4%;
-}
+
+
 div.article-logo {
   margin-top:-.4vw;
-  display:block ;
+  display:flex ;
   background-color:#1c2786;
+  align-items: center;
+  gap:50px;
   }
   img#logo {
     height: 3vw;
@@ -59,32 +120,7 @@ div.article-logo {
   a:-webkit-any-link {
     vertical-align: 25px;
 }
-.topnav a {
-  color: #8aa5c5;
-  
-  font-size: 17px;
-  width: 14%;
-  line-height: 20px;
-  bottom: 30px;
-  padding-left: 20px;
-}
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-
-
- 
-  .topnav input[type=text] {
-    border: 1px solid #ccc;  
-  }
 
 h1 {
   margin-top: 0px;
@@ -119,12 +155,7 @@ font-family: Julius Sans One;
 font-style: normal;
 letter-spacing: 10px;
 }
-.topnav label {
-  font-size: 16px;
-}
-.topnav h1 {
-  font-size: 16px;
-}
+
 body {
   background-color: #79C6D7;
   
@@ -173,6 +204,9 @@ h1 #content-box {
 h1 b {
   color: #E5FAFF;
 }
+label[for="psw"], label[for="email"]{
+  height: 19px;
+}
 label {
   font-weight: 100;
     stroke:  #79c6d7;
@@ -186,17 +220,9 @@ label {
     font-style: normal;
     height: 70px;
     background-color: #ffffff;
+    margin-bottom: 2%;
 }
-  header {
-   font-family: "Nokora";
-   display: flex;
-   justify-content: center;
-   font-size: 29px;
- }
- #first-page {
-  margin: 10px 15%;
-     height:max-content;
- }
+
  
  :-webkit-any(h1) section {
   font-size: 1.5em;
@@ -290,9 +316,104 @@ li {
   stroke-opacity: 10px;
   
 }
+label[for="content-box"] {
+  color: #1c2786;
+  background-color: transparent;
+
+}
 label[for="textarea"] {
   text-align: center;
   font-size: small;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=email], .form-container input[type=password] {
+  width: 90%;
+  padding: 15px;
+  margin: 0px 10px 8%;
+  border: 1px solid black;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+button#create {
+  background-color: rgb(255, 162, 0);
+  color: white;
+  display: flex;
+  border: none;
+  align-items: center;
+  justify-content: space-around;
+}
+ #login.btn.cancel {
+background-color: rgb(255, 162, 0);
+color: white;
+display: flex;
+align-items: center;
+justify-content: space-around;
+}
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+.form-container h1 {
+  line-height: 35px;
+}
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
 /* Button used to open the contact form - fixed at the bottom of the page */
 
