--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,9 +1,43 @@
 *
 
 #first-page {
-  margin: 10px 15%;
+  margin: 10px 12%;
      height:max-content;
  }
+ .topnav{
+  margin: 8px -2.4%;
+}
+.topnav a {
+  color: #8aa5c5;
+  
+  font-size: 17px;
+  width: 14%;
+  line-height: 20px;
+  bottom: 30px;
+  padding-left: 20px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+ .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+ 
+ .topnav label {
+    font-size: 16px;
+}
+ .topnav h1 {
+    font-size: 16px;
+}
+
+
  header #desktop-nav menu {
   display: flex;
   gap: 40px;
@@ -15,10 +49,12 @@ nav {
 }
 header {
   font-family: "Nokora";
-  display: flex;
-  justify-content: center;
+  display: inline-flex;
+  justify-content: space-around;
   font-size: 29px;
+  margin: -9px -80px;
 }
+
 header menu li {
   list-style: none;
 }
@@ -29,44 +65,22 @@ header menu li a {
   text-decoration: none;
   transition: color .5s;
 }
- nav#desktop-nav{
-  margin: -10px -21.4%;
+nav#desktop-nav{
+  margin: -9px -20.4%;
   color: #8aa5c5; 
+  font-size: 17px;
+  line-height: 20px;
+  display: flex;
+  width: 100%;
+}
+.topnav a {
+  color: #8aa5c5;
+  
   font-size: 17px;
   line-height: 20px;
   bottom: 30px;
   padding-left: 20px;
-  display: flex;
-  }
-  .topnav a {
-    color: #8aa5c5;
-    
-    font-size: 17px;
-    width: 14%;
-    line-height: 20px;
-    bottom: 30px;
-    padding-left: 20px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #2196F3;
-    color: white;
-  }
-  .topnav input[type=text] {
-      border: 1px solid #ccc;  
-  } 
-  .topnav label {
-    font-size: 16px;
-  }
-  .topnav h1 {
-    font-size: 16px;
-  }
-
+}
 *#perspectives h1 {
   font-family:"Nokora";
   font-style: normal;
@@ -95,16 +109,15 @@ div{
   display: block;
   unicode-bidi: isolate;
 }
-
-
 div.article-logo {
-  margin-top:-.4vw;
   display:flex ;
   background-color:#1c2786;
   align-items: center;
-  gap:50px;
-  }
-  img#logo {
+  gap:10vw;
+  padding-right: 4.1vw;
+  padding-left: 16vw;
+}
+img#logo {
     height: 3vw;
     display: inline;
     margin-top: 1vw ;
@@ -140,7 +153,7 @@ h1 span {
 }
 #perspective h2 {
   text-align: center;
-  }
+}
 #perspective p {
 text-indent: 5em;
 font-size: 22px;
